--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ pylint = "^2.12.2"
 pytest-cov = "^3.0.0"
 codecov = "^2.1.12"
 coverage = "^6.2"
+cython = "^0.29.26"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
